[project]
name = "django-re-fiber"
version = "0.1.0"
description = "A mini log/observability platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "djangorestframework>=3.17.1",
    "psycopg2>=2.9.12",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
]
