[project]
name = "django-api-refresh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "django-debug-toolbar>=7.0.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.30.0",
    "pillow>=12.3.0",
    "psycopg2>=2.9.12",
]
